<resources>
    <string name="app_name">DocXp</string>

    <!-- Different User Details-->
    <string name="registration_form">Healing Touch</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Sign in</string>
    <string name="donthaveanaccount">Dont have an account?</string>
    <string name="signup">Sign up</string>
    <string name="signinwith">OR</string>
    <string name="change">Change</string>
    <string name="speciality">Speciality</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verify">Verify</string>
    <string name="google">Sign in  with google</string>
    <string name="changepassword">Change Password</string>
    <string name="mobileoremail">Mobile or Email</string>
    <string name="forgetpasswordinfo">We will send a OTP using which you will be able to create a new password.</string>

    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_doctor_navigation">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="list_of_appointments">List of Appointments</string>
    <string name="my_schedule">My Schedule</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_patient_navigation">Home</string>
    <string name="find_hospital">Find Hospital</string>
    <string name="patient_name">Patient name</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="doctor_name">Doctor name</string>
    <string name="search_for_city">Search for city</string>
    <string name="conform">Confirm</string>
    <string name="contact">Contact</string>
    <string name="city">City</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="hospital">Hospital</string>
    <string name="notification">Notification</string>
    <string name="old">Old</string>
    <string name="text_new">New</string>
    <string name="book">Book</string>
    <string name="no_of_appointments">No of appointments:</string>
    <string name="search_by">Search by....</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reject">Reject</string>
    <string name="cancle">Cancel</string>
    <string name="done">Done</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="doctor_list">Doctor List</string>
    <string name="login_wall_image">Login Wall Image</string>
    <string name="nameerror">Enter Valid Name</string>
    <string name="emailerror">Enter Valid Email</string>
    <string name="passworderror">Enter Some Password</string>
    <string name="mobileerror">Enter Valid Mobile Number</string>
    <string name="changename">Change Name</string>
    <string name="changePassword">Change Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="change_profile">Change Profile</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="select_date">Select date</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="save">Save</string>
    <string name="my_appointment">My Appointment</string>
    <string name="emergency_contact_list">Emergency Contact list</string>
    <string name="near_by_hospital">Near By Hospital</string>
    <string name="geofence_textview">Turn on the toggle button to get notification when you are 100 meters away from the hospital.</string>
    <string name="action_geofence">Geofence</string>


</resources>
