<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/doc_nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/doc_nav_profile"
            android:icon="@drawable/profile_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/doc_nav_listofappointments"
            android:icon="@drawable/listofappointment"
            android:title="@string/list_of_appointments" />
        <item
            android:id="@+id/doc_nav_myschedule"
            android:icon="@drawable/myschedule_24dp"
            android:title="@string/my_schedule" />
        <item
            android:id="@+id/doc_nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/log_out"/>
    </group>

</menu>
