<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.docxp.OTPActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_250"
        android:src="@mipmap/newone"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/login_wall_image"
        android:layout_alignParentStart="true"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="146dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:id="@+id/forgetPassword_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_70dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/default_circle_indicator_radius"
            app:cardPreventCornerOverlap="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20dp"
                android:background="@color/colorWhite"
                android:paddingLeft="@dimen/padding_10dp"
                android:paddingRight="@dimen/padding_10dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/otp_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:text="@string/otp"
                    android:textColor="@color/colorHeading"
                    android:textSize="@dimen/font_30"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/otp_heading"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColorHint="@color/colorAccent"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_otp"
                        android:id="@+id/edittext_otp"
                        android:drawableStart="@android:drawable/ic_lock_idle_lock"
                        android:drawablePadding="@dimen/padding_10dp"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:paddingLeft="@dimen/padding_10dp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textview_otp_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textinputlayout_otp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:gravity="center"
                    android:paddingLeft="@dimen/padding_5dp"
                    android:text="@string/forgetpasswordinfo"
                    android:textSize="@dimen/font_16" />

                <Button
                    android:id="@+id/otp_button"
                    style="@style/AlertDialog.AppCompat.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textview_otp_info"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginRight="@dimen/margin_20dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:background="@drawable/custom_button_event"
                    android:text="@string/verify"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font_20" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</RelativeLayout>
