<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.docxp.ChangePasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_250"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/login_wall_image"
        android:src="@mipmap/newone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="151dp">

        <android.support.v7.widget.CardView
            android:id="@+id/changePassword_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_70dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/default_circle_indicator_radius"
            app:cardPreventCornerOverlap="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20dp"
                android:background="@color/colorWhite"
                android:paddingLeft="@dimen/padding_10dp"
                android:paddingRight="@dimen/padding_10dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/change_password_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/changepassword"
                    android:textColor="@color/colorHeading"
                    android:textSize="@dimen/font_30"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/change_password_heading"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColorHint="@color/colorAccent"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edittext_changePassword_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/padding_10dp"
                        android:drawableStart="@drawable/ic_password"
                        android:hint="@string/password"
                        android:paddingStart="@dimen/padding_10dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/change_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/change_password"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColorHint="@color/colorAccent"
                    app:hintAnimationEnabled="true"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edittext_changePassword_confirmPassowrd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_password"
                        android:hint="@string/confirm"
                        android:paddingStart="@dimen/padding_10dp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/forget_password_button"
                    style="@style/AlertDialog.AppCompat.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/change_confirmpassword"
                    android:layout_marginEnd="@dimen/margin_20dp"
                    android:layout_marginStart="@dimen/margin_20dp"
                    android:layout_marginTop="@dimen/margin_15dp"
                    android:background="@drawable/custom_button_event"
                    android:text="@string/change"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font_20" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>